--- a/index.html
+++ b/index.html
@@ -2,10 +2,15 @@
 <html>
 <head>
     <title></title>
+
 </head>
 <body>
-    <h1>
-        Hello, im hosted on github
-    </h1>
+
+<div style="float:left;margin:0;" id="msg"></div>
+<span id="indicator" style="float:left;">_</span>
+
+<script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
+<script src="textEffect.js"></script>
+
 </body>
 </html>
