--- a/index.html
+++ b/index.html
@@ -2,14 +2,21 @@
 <html>
 <head>
     <title></title>
+    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="animations.css"/>
 
 </head>
 <body>
 
-<div style="float:left;margin:0;" id="msg"></div>
-<span id="indicator" style="float:left;">_</span>
+<div class="container">
+    <div id="terminal" class="terminal setMiddle">
+        <pre class="" style="float:left;margin:0;text-align: left;" id="msg">
 
-<script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
+        </pre>
+    </div>
+</div>
+
+
 <script src="textEffect.js"></script>
 
 </body>
